--- a/index.html
+++ b/index.html
@@ -53,7 +53,15 @@
 		    	<div>
 		    		<img src="./img/logo.jpg" width=256 />
 		    	</div>
-		    	<p class="lead">简单、有趣、创造价值的移动互联网团队。 @Ceelog、@YC、@Zubin、@Comet</p>
+		    	<p class="lead">简单、有趣、创造价值的移动互联网团队。 
+		    	<a href="http://weibo.com/ceelog" target="_blank">@Ceelog</a>
+		    	、
+		    	<a href="http://weibo.com/kangzubin" target="_blank">@YC</a>
+		    	、
+		    	<a href="http://weibo.com/u/2127752071" target="_blank">@Zubin</a>
+		    	、
+		    	<a href="./" target="_blank">@Comet</a>
+		    	</p>
 		  </div>
 
 			<div>
