--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 		    	、
 		    	<a href="http://weibo.com/u/2127752071" target="_blank">@Zubin</a>
 		    	、
-		    	<a href="./" target="_blank">@Comet</a>
+		    	<a href="http://weibo.com/mayloveless" target="_blank">@Comet</a>
 		    	</p>
 		  </div>
 
