--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
 		    	<p class="lead">简单、有趣、创造价值的移动互联网团队。 
 		    	<a href="http://weibo.com/ceelog" target="_blank">@Ceelog</a>
 		    	、
-		    	<a href="http://weibo.com/kangzubin" target="_blank">@YC</a>
+		    	<a href="http://weibo.com/kangzubin" target="_blank">@Zubin</a>
 		    	、
-		    	<a href="http://weibo.com/u/2127752071" target="_blank">@Zubin</a>
+		    	<a href="http://weibo.com/u/2127752071" target="_blank">@YC</a>
 		    	、
-		    	<a href="./" target="_blank">@Comet</a>
+		    	<a href="http://weibo.com/mayloveless" target="_blank">@Comet</a>
 		    	</p>
 		  </div>
 
