--- a/index.html
+++ b/index.html
@@ -54,13 +54,21 @@
 		    		<img src="./img/logo.jpg" width=256 />
 		    	</div>
 		    	<p class="lead">简单、有趣、创造价值的移动互联网团队。 
-		    	<a href="http://weibo.com/ceelog" target="_blank">@Ceelog</a>
-		    	、
-		    	<a href="http://weibo.com/kangzubin" target="_blank">@Zubin</a>
-		    	、
-		    	<a href="http://weibo.com/u/2127752071" target="_blank">@YC</a>
-		    	、
-		    	<a href="http://weibo.com/mayloveless" target="_blank">@Comet</a>
+			    	<a href="http://weibo.com/ceelog" target="_blank">@Ceelog</a>
+			    	、
+			    	<a href="http://weibo.com/kangzubin" target="_blank">@Zubin</a>
+			    	、
+			    	<a href="http://weibo.com/u/2127752071" target="_blank">@YC</a>
+			    	、
+			    	<a href="http://weibo.com/mayloveless" target="_blank">@Comet</a>
+		    	</p>
+
+		    	<p class="lead">上线项目： 
+			    	<a href="http://iqiubo.com" target="_blank">@秋菠网</a>
+			    	、
+			    	<a href="http://zaozhidao.iqiubo.com" target="_blank">@亲历</a>
+			    	、
+			    	<a href="http://love.iqiubo.com" target="_blank">@QA恋</a> 
 		    	</p>
 		  </div>
 
