--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-		<title>麦檬科技</title> 
+		<title>麦檬科技 - 简单、有趣、创造价值</title> 
 		<meta name="Description" content="简单、有趣、创造价值的移动互联网团队。 " />
  		<link rel="stylesheet" type="text/css" href="./tool/bootstrap/css/bootstrap.min.css" />
  		<script language='javascript' src='http://cdn.staticfile.org/jquery/2.0.3/jquery.min.js'></script>
