add shengming's link

--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
 		    	<a href="http://weibo.com/u/2127752071" target="_blank">@YC</a>
 		    	、
 		    	<a href="http://weibo.com/mayloveless" target="_blank">@Comet</a>
+				、
+				<a href="http://weibo.com/u/1886549523" target="_blank">@shengming</a>
 	    	</p>
 
 	    	<p class="lead">上线项目： 
